Fix QTextureImageData data access with individual TextureImages

Task-number: QTBUG-69138
Change-Id: I0d980db0873af4f64dddc356d6d3ec4bc4c81857
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>